noinst_LIBRARIES = libJSBsim.a

EXTRA_DIST = aircraft engine

libJSBsim_a_SOURCES = FGAircraft.cpp FGAircraft.h \
	FGAtmosphere.cpp FGAtmosphere.h \
	FGAuxiliary.cpp FGAuxiliary.h \
	FGCoefficient.cpp FGCoefficient.h \
	FGFCS.cpp FGFCS.h \
	FGFDMExec.cpp FGFDMExec.h \
	FGModel.cpp FGModel.h \
	FGOutput.cpp FGOutput.h \
	FGPosition.cpp FGPosition.h \
	FGRotation.cpp FGRotation.h \
	FGState.cpp FGState.h \
	FGTranslation.cpp FGTranslation.h \
	FGUtility.cpp FGUtility.h \
	FGEngine.cpp FGEngine.h \
	FGTank.cpp FGTank.h 
