noinst_LIBRARIES = libMath.a

libMath_a_SOURCES = \
	MAT3geom.c \
	MAT3inv.c \
	MAT3mat.c \
	MAT3vec.c \
	fg_geodesy.cxx fg_geodesy.hxx \
	fg_random.c fg_random.h \
	interpolater.cxx interpolater.hxx \
	mat3.h mat3defs.h mat3err.h \
	point3d.hxx \
	polar3d.cxx polar3d.hxx \
	vector.cxx vector.hxx

INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
