libdir	= ${exec_prefix}/lib

lib_LTLIBRARIES = libPui.la

libPui_la_SOURCES = \
	pu.h puLocal.h \
	pu.cxx \
	puBox.cxx \
	puButton.cxx \
	puButtonBox.cxx \
	puDialogBox.cxx \
	puFrame.cxx \
	puInput.cxx \
	puInterface.cxx \
	puMenuBar.cxx \
	puObject.cxx \
	puOneShot.cxx \
	puPopup.cxx \
	puPopupMenu.cxx \
	puSlider.cxx \
	puText.cxx

INCLUDES += -I$(top_builddir)

