noinst_LIBRARIES = libPUI.a

libPUI_a_SOURCES = \
	pu.h puLocal.h \
	complex.cxx \
	pu.cxx \
	puBox.cxx \
	puButton.cxx \
	puButtonBox.cxx \
	puDialogBox.cxx \
	puFrame.cxx \
	puInput.cxx \
	puInterface.cxx \
	puMenuBar.cxx \
	puObject.cxx \
	puOneShot.cxx \
	puPopup.cxx \
	puPopupMenu.cxx \
	puSlider.cxx \
	puText.cxx

INCLUDES += -I$(top_builddir)

