noinst_LIBRARIES = libScenery.a

libScenery_a_SOURCES = \
	material.cxx material.hxx \
	obj.cxx obj.hxx \
	scenery.cxx scenery.hxx \
	texload.c texload.h \
	tile.cxx tile.hxx \
	tilecache.cxx tilecache.hxx \
	tilemgr.cxx tilemgr.hxx

INCLUDES += \
	-I$(top_builddir) \
	-I$(top_builddir)/Lib \
	-I$(top_builddir)/Simulator
