bin_PROGRAMS = strips

strips_SOURCES = \
	add.c add.h \
	bands.c \
	common.c common.h \
	define.h \
	extend.h \
	free.c free.h \
	global.h \
	glove.h \
	init.c init.h \
	local.c local.h \
	my_global.h \
	newpolve.c \
	options.c options.h \
	output.c output.h \
	outputex.c outputex.h \
	partial.c partial.h \
	polverts.h polvertsex.h \
	queue.c queue.h \
	sgi_triang.c sgi_triangex.c \
	struct.c struct.h \
	structex.c \
	sturcts.h sturctsex.h \
	ties.c ties.h \
	triangulate.h triangulatex.h \
	util.c util.h

