bin_PROGRAMS = strips

strips_SOURCES = \
	add.c add.h \
	bands.c \
	common.c common.h \
	extend.h \
	free.c free.h \
	global.h \
	init.c init.h \
	local.c local.h \
	newpolve.c \
	options.c options.h \
	output.c output.h \
	outputex.c outputex.h \
	partial.c partial.h \
	polverts.h polyvertsex.h \
	queue.c queue.h \
	sgi_triang.c sgi_triangex.c \
	struct.c \
	structex.c \
	sturcts.h sturctsex.h \
	ties.c ties.h \
	triangulate.h triangulatex.h \
	util.c util.h

