SUBDIRS = \
        Include \
        Aircraft \
        Airports \
        ATC \
        Autopilot \
        Cockpit \
        Environment \
        FDM \
        GUI \
        Input \
	Instrumentation \
        Model \
	AIModel \
        Navaids \
        Network \
	MultiPlayer \
        Scenery \
	Scripting \
        Sound \
        Systems \
        Time \
	Traffic \
        Main
