if ENABLE_ATCDCL
ATCDCL_DIR = ATCDCL
else
ATCDCL_DIR = 
endif


SUBDIRS = \
        Include \
        Aircraft \
        Airports \
	ATC \
        $(ATCDCL_DIR) \
        Autopilot \
        Cockpit \
        Environment \
        FDM \
        GUI \
        Input \
	Instrumentation \
        Model \
	AIModel \
        Navaids \
        Network \
	MultiPlayer \
        Scenery \
	Scripting \
        Sound \
        Systems \
        Time \
	Traffic \
        Main
